fixed bugs interferring with mode selection wrapped logo in a button to allow for easier page refresh.

--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ main {
   margin-block-end: 2em;
 }
 
+.head button {
+  background: none;
+}
+
 .logo-desktop {
   display: none;
 }
